--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.13.4",
-    "morgan": "^1.7.0"
+    "mongoose": "^4.5.7",
+    "morgan": "^1.7.0",
+    "router": "^1.1.4"
   }
 }
