--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "supertest": "^1.2.0"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
+    "jsonwebtoken": "^7.1.6",
     "mongoose": "^4.5.7",
     "morgan": "^1.7.0",
     "router": "^1.1.4"
